<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".HomeActivity">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp10"
            android:layout_marginTop="@dimen/dp15"
            android:background="@color/bg_line"
            app:layout_constraintTop_toBottomOf="@+id/recycler_view_category" />

        <LinearLayout
            android:id="@+id/layout_service"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/home_bg_service"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/line">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:paddingStart="@dimen/dp15"
                android:paddingTop="@dimen/dp18"
                android:text="@string/home_service"
                android:textColor="@color/home_header_sub_title"
                android:textSize="@dimen/sp20" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_service"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <View
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp10"
            android:background="@color/bg_line"
            app:layout_constraintTop_toBottomOf="@+id/layout_service" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_bank_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp10"
            app:layout_constraintTop_toBottomOf="@+id/line1">

            <ImageView
                android:id="@+id/image_card"
                android:layout_width="@dimen/logo_bank_card"
                android:layout_height="@dimen/logo_bank_card"
                android:paddingStart="@dimen/dp15"
                android:paddingEnd="@dimen/dp15"
                android:paddingTop="@dimen/dp10"
                android:paddingBottom="@dimen/dp10"
                android:src="@drawable/ic_card_bank" />

            <TextView
                android:id="@+id/image_card_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_bank_card_title"
                android:textColor="@color/home_header_title"
                android:textSize="@dimen/sp18"
                app:layout_constraintLeft_toRightOf="@+id/image_card" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp20"
                android:text="@string/home_bank_card_title_des"
                app:layout_constraintBottom_toBottomOf="@+id/image_card"
                app:layout_constraintLeft_toLeftOf="@+id/image_card_title"
                app:layout_constraintTop_toBottomOf="@+id/image_card_title" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="@dimen/dp15"
                android:layout_height="@dimen/dp15"
                android:layout_marginEnd="20dp"
                android:src="@drawable/ic_arrow_right"
                app:layout_constraintBottom_toBottomOf="@+id/image_card"
                app:layout_constraintEnd_toEndOf="@+id/layout_bank_card"
                app:layout_constraintTop_toTopOf="@+id/image_card_title" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/line2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp10"
            android:layout_marginTop="@dimen/dp15"
            android:background="@color/bg_line"
            app:layout_constraintTop_toBottomOf="@+id/layout_bank_card" />

        <TextView
            android:id="@+id/text_view_hot_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp15"
            android:text="@string/home_hot_keyword"
            android:textColor="@color/home_header_title"
            android:textSize="@dimen/text_home_header"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/line2" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_hot_key_word"
            android:layout_width="match_parent"
            android:layout_height="@dimen/home_keyword_hot"
            android:paddingStart="@dimen/dp15"
            android:paddingEnd="@dimen/dp15"
            app:layout_constraintTop_toBottomOf="@+id/text_view_hot_title" />

        <View
            android:id="@+id/line3"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp10"
            android:layout_marginTop="@dimen/dp15"
            android:background="@color/bg_line"
            app:layout_constraintTop_toBottomOf="@+id/recycler_view_hot_key_word" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp40"
            app:layout_constraintTop_toBottomOf="@+id/recycler_view_hot_key_word">

            <TextView
                android:id="@+id/text_view_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="58dp"
                android:paddingStart="@dimen/dp15"
                android:paddingTop="0dp"
                android:paddingEnd="@dimen/dp15"
                android:paddingBottom="@dimen/dp15"
                android:text="@string/home_login_register"
                android:textColor="@color/home_header_title"
                android:textSize="@dimen/text_home_header"
                app:layout_constraintBottom_toTopOf="@+id/btn_register"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <Button
                android:id="@+id/btn_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:paddingStart="@dimen/dp20"
                android:paddingLeft="@dimen/dp20"
                android:paddingEnd="@dimen/dp20"
                android:paddingRight="@dimen/dp20"
                android:text="@string/register"
                android:background="@color/bg_register"
                android:textColor="@color/text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="@+id/text_view_login"
                app:layout_constraintTop_toBottomOf="@+id/text_view_login" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp15"
                android:paddingStart="@dimen/dp20"
                android:paddingLeft="@dimen/dp20"
                android:paddingEnd="@dimen/dp20"
                android:paddingRight="@dimen/dp20"
                android:text="@string/login"
                android:background="@color/bg_login"
                android:textColor="@color/text"
                app:layout_constraintLeft_toRightOf="@+id/btn_register"
                app:layout_constraintTop_toBottomOf="@+id/text_view_login" />

            <ImageView
                android:layout_width="@dimen/logo_tiki_cart"
                android:layout_height="@dimen/logo_tiki_cart"
                android:layout_marginStart="@dimen/dp20"
                android:layout_marginEnd="@dimen/dp20"
                android:src="@drawable/ic_tiki_cart"
                app:layout_constraintBottom_toBottomOf="@+id/btn_register"
                app:layout_constraintEnd_toEndOf="@+id/layout_login"
                app:layout_constraintTop_toTopOf="@+id/text_view_login" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/line4"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp10"
            android:layout_marginTop="@dimen/dp15"
            android:background="@color/bg_line"
            app:layout_constraintTop_toBottomOf="@+id/layout_login" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_deal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp25"
            android:background="@color/bg_tiki_deal"
            app:layout_constraintTop_toBottomOf="@+id/layout_login">

            <TextView
                android:id="@+id/text_view_deal_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/dp15"
                android:paddingTop="@dimen/dp15"
                android:text="@string/home_deal_title"
                android:textColor="@color/home_header_sub_title"
                android:textSize="@dimen/sp18"
                app:layout_constraintBottom_toTopOf="@+id/recycler_view_deal"
                app:layout_constraintStart_toStartOf="@+id/recycler_view_deal"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_deal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="#fff"
                android:layout_marginStart="@dimen/dp15"
                android:layout_marginEnd="@dimen/dp15"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_deal_title" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>